# voicebot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  index.html  makefile  package-lock.json  package.json  pyproject.toml  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  docs.yaml
config/: __init__.py  config.yaml
src/scripts/: main.py  run_bot.py  tts_example.py
src/voicebot/: __init__.py  bot.py  speech_recognition.py  speech_recording.py  speech_synthesis.py  text_engine.py  utils.py  weather.py
src/voicebot/skills/: __init__.py  weather.py
src/voicebot/tools/: __init__.py  cat.py  news.py  timer.py  weather.py  web_search.py
tests/: __init__.py
