[project]
name = "voicebot"
version = "0.0.0"
description = "A simple Danish voice bot."
readme = "README.md"
authors = [
    {name = "Dan Saattrup Smart", email = "saattrupdan@gmail.com"},
]
maintainers = [
    {name = "Dan Saattrup Smart", email = "saattrupdan@gmail.com"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
  "hydra-core>=1.3.2",
  "transformers>=4.44.2,<4.47.0",
  "openai>=1.44.0",
  "pydub>=0.25.1",
  "torch>=2.4.1",
  "python-dotenv>=1.0.1",
  "sounddevice>=0.5.0",
  "pvrecorder>=1.2.2",
  "openmeteo-requests>=1.3.0",
  "requests-cache>=1.2.1",
  "retry-requests>=2.0.0",
  "geocoder>=1.38.1",
  "fastapi>=0.115.0",
  "chatterbox-tts>=0.1.4",
  "torchaudio>=2.6.0",
  "onnxruntime>=1.23.2",
  "openwakeword>=0.6.0",
  "peft>=0.18.0",
  "setuptools>=80.9.0,<81.0.0",
  "kenlm",
  "punctfix>=0.11.1",
  "pyctcdecode>=0.5.0",
  "chime>=0.7.0",
  "torch-audiomentations>=0.12.0",
  "webscout>=2026.1.22",
]

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy>=1.25.2"]

[tool.uv.sources]
chatterbox-tts = { path = "../chatterbox_fork" }
kenlm = { url = "https://github.com/kpu/kenlm/archive/master.zip" }

[project.urls]
Repository = "https://github.com/saattrupdan/voicebot"
Issues = "https://github.com/saattrupdan/voicebot/issues"

[project.license]
text = "MIT"

[dependency-groups]
dev = [
  "pytest>=8.1.1",
  "pytest-cov>=4.1.0",
  "pre-commit>=3.6.2",
  "pdoc>=14.1.0",
  "readme-coverage-badger>=0.1.2",
  "click>=8.1.7",
  "ruff>=0.3.2",
  "pyrefly>=0.43.1",
  "nbstripout>=0.7.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".euroeval_cache",
    ".venv",
]
extend-include = [
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    # isort (imports)
    "I",
    # pydocstyle (docstrings)
    "D",
    # pycodestyle errors and warnings (PEP8)
    "E",
    "W",
    # flake-annotations (type hints)
    "ANN",
    # Pyflakes
    "F",
]
ignore = [
    # Type annotations for "self" arguments
    "ANN101",
    # Type annotations for "cls" arguments
    "ANN102",
    # Type annotations for *args
    "ANN002",
    # Type annotations for **kwargs
    "ANN003",
    # Docstrings for **kwargs
    "D417",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/main.py" = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--cov=src/euroeval",
    "--color=yes",
    "-vvv",
    "--allow-unix-socket",
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
]
log_cli_level = "INFO"
testpaths = [
    "tests",
    "src/euroeval",
]
pythonpath = [
    "src",
    "src/scripts",
]

[tool.pyrefly]
site-package-path = [".venv/lib/python3.11/site-packages"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
